[project]
name = "astroglial-morphology"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.7,<3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "astroglial_morphology", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
